// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`breakpoint split view 1`] = `
<g
  data-testid="pacbio_hg002_breakpoints-loaded"
  fill="none"
  stroke-width="1"
>
  <path
    d="M 408.99312656000257 92.5 C 454.02419029032706 92.5 358.38761648492994 486.5 403.4186802152544 486.5"
    data-testid="r1"
    stroke="#ff0000"
    stroke-opacity="0.8"
    stroke-width="1"
  />
  <path
    d="M 408.99312656000257 92.5 C 454.02419029032706 92.5 358.38761648492994 486.5 403.4186802152544 486.5"
    pointer-events="stroke"
    stroke="transparent"
    stroke-width="10"
  />
  <path
    d="M 658.4186802152544 486.5 C 746.2499549001666 486.5 319.1618518750904 68.5 406.99312656000257 68.5"
    data-testid="r1"
    stroke="#ff0000"
    stroke-opacity="0.8"
    stroke-width="1"
  />
  <path
    d="M 658.4186802152544 486.5 C 746.2499549001666 486.5 319.1618518750904 68.5 406.99312656000257 68.5"
    pointer-events="stroke"
    stroke="transparent"
    stroke-width="10"
  />
</g>
`;

exports[`breakpoint split view 2`] = `
<g
  data-testid="pacbio_vcf-loaded"
  fill="none"
  stroke="#2e7d32"
  stroke-width="5"
>
  <path
    d="M 388.99312656000257 315 L 408.99312656000257 315 L 403.4186802152544 664 L 423.4186802152544 664"
    data-testid="r2"
    stroke-width="5"
  />
  <path
    d="M 388.99312656000257 315 L 408.99312656000257 315 L 403.4186802152544 664 L 423.4186802152544 664"
    pointer-events="stroke"
    stroke="transparent"
    stroke-width="10"
  />
</g>
`;
